--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPzmyp2ggx0vadYQ+MA9HmK",
+      "authorship_tag": "ABX9TyO8k/Z03ETPiOyZ1buVUEfs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -803,7 +802,7 @@
         "id": "kmotkAtcy9wK",
         "outputId": "03020633-475a-4582-fa66-bcb44f2124f0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +856,7 @@
         "id": "aHeIupB8UmZZ",
         "outputId": "fdb5cedd-0fc8-43db-a705-30e4b034806c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,7 +920,7 @@
         "id": "Ggzwy3-eoFJ3",
         "outputId": "119a3896-7113-4e92-8c46-daeb1b1ff724"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -990,7 +989,7 @@
         "id": "usJ1KJDwsanl",
         "outputId": "78f64f8f-f899-462c-e146-495e01788f5d"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1098,7 +1097,7 @@
         "id": "0MAvJ_Mxsm72",
         "outputId": "a15b925a-3512-476a-93bc-29cda4d65603"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1121,12 +1120,533 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "umur = int(input(\"Masukan umur:\"))\n",
+        "punya_sim = input(\"Punya SIM? (ya/tidak):\")\n",
+        "\n",
+        "if umur >= 17 and punya_sim == \"ya\":\n",
+        "    print(\"Boleh mengendarai Motor\")\n",
+        "else:\n",
+        "    print(\"Tidak Boleh mengendarai Motor\")"
+      ],
       "metadata": {
-        "id": "ZAm8kr43wy2g"
+        "id": "ZAm8kr43wy2g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19c3cbca-1d16-4498-ff78-9b9e8e870086"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan umur:16\n",
+            "Punya SIM? (ya/tidak):ya\n",
+            "Tidak Boleh mengendarai Motor\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Nested if (IF Bersarang)"
+      ],
+      "metadata": {
+        "id": "jdQiYziSKVgR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "username = input(\"username: \")\n",
+        "password = input(\"Password: \")\n",
+        "\n",
+        "if username == \"admin\":\n",
+        "    if password == \"12345\":\n",
+        "        print(\"login berhasil\")\n",
+        "        print(\"Selamat datang admin\")\n",
+        "    else:\n",
+        "        print(\"password salah\")\n",
+        "else:\n",
+        "  print(\"username tidak ditemukan\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E3IRGY2FKcKd",
+        "outputId": "729cc843-c937-40c9-8dde-b3ddbfe3252b"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "username: admin\n",
+            "Password: 12345\n",
+            "login berhasil\n",
+            "Selamat datang admin\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Match case"
+      ],
+      "metadata": {
+        "id": "KvYGmvihMDXC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-Match case adalah fitur alternatif yang lebih bersih untuk elid yang banyak"
+      ],
+      "metadata": {
+        "id": "CWtxOBx1MTnm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hari =input(\"Masukan nama hari: \").lower()\n",
+        "#lower = inputan harus huruf kecil\n",
+        "\n",
+        "match hari:\n",
+        "    case \"senin\" | \"selasa\" | \"rabu\" | \"kamis\" | \"jumat\":\n",
+        "        print(\"Hari kerja\")\n",
+        "    case \"sabtu\" | \"minggu\":\n",
+        "        print(\"Hari libur\")\n",
+        "    case _:\n",
+        "        print(\"Nama hari tidak valid\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LIRFh_iAMdR-",
+        "outputId": "9f1e549d-6e2a-4875-ac01-64dbc1eea6e8"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan nama hari: senin\n",
+            "Hari kerja\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Conditional Expression (Ternary Operator)"
+      ],
+      "metadata": {
+        "id": "7cK_Jde9OYwL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Conditional expression memmungkinan kita menulis kondisi kondisi sederhana dalam satu baris"
+      ],
+      "metadata": {
+        "id": "zYVfE6S9OfB_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "angka = int(input(\"Masukan angka: \"))\n",
+        "\n",
+        "# Dengan if-else biasa\n",
+        "# if angka > 0:\n",
+        "#   hasil = \"Positif\"\n",
+        "# else:\n",
+        "#   hasil = \"Non-positif\"\n",
+        "\n",
+        "# Dengan Ternary operator (lebih singkat)\n",
+        "hasil = \"Positif\" if angka > 0 else \"Non-positif\"\n",
+        "print(\"Angka tersebut:\", hasil)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n0c8tGepOreW",
+        "outputId": "1b5e3e9a-be77-43d1-bac6-04cbdc3bb279"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan angka: 0\n",
+            "Angka tersebut: Non-positif\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Perulangan"
+      ],
+      "metadata": {
+        "id": "PhCLISubSLKF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### For Loop"
+      ],
+      "metadata": {
+        "id": "sxuh-GJqSZ4d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- For loop digunakan unutk mengulang kode sejumlah tertentu atau meniterasi melalui sekumpulan data\n",
+        "- For loop biasanya menggunakan function range() untuk membuat urutan angka untuk perulangannya"
+      ],
+      "metadata": {
+        "id": "bReNyxTaSdOO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mencetak angka 0 sampai 4\n",
+        "for i in range(5):\n",
+        "  print(i)\n",
+        "\n",
+        "# Mencetak angka 1 sampai 5\n",
+        "# 1 = Mulai dari\n",
+        "# 6 = sampai dari\n",
+        "for i in range(1,6):\n",
+        "  print(i)\n",
+        "\n",
+        "# Mencetak \"Hallo\" sebanyak 3 kali\n",
+        "for i in range(3):\n",
+        "  print(\"Hello\")\n",
+        "\n",
+        "# Menghitung Mundur\n",
+        "# 5 mulai\n",
+        "# 0 sampai\n",
+        "# -1 setiap perulangan dikurang -1\n",
+        "print(\"Menghitung Muncul:\")\n",
+        "for i in range(5, 0, -1):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Ufbd6gIHUbk",
+        "outputId": "ddbc6312-de50-4169-9c6d-31c9a8982f49"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####For Look dengan String"
+      ],
+      "metadata": {
+        "id": "uwtIvdAAeC4e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- For loop juga bisa digunakan untuk mengiterasi setipa karakter dalam string"
+      ],
+      "metadata": {
+        "id": "75LXTCcseGcX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " nama = \"python\"\n",
+        " for huruf in nama:\n",
+        "      print(huruf)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "kata = str(input(\"Masukan kata: \"))\n",
+        "print(\"Huruf-Huruf dalam kata: \")\n",
+        "for karakter in kata:\n",
+        "      print(\"-\", karakter)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QlBZKagXeM_Q",
+        "outputId": "6caf8b89-d9a9-4f5f-c273-e3134d5780d3"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "p\n",
+            "y\n",
+            "t\n",
+            "h\n",
+            "o\n",
+            "n\n",
+            "\n",
+            "\n",
+            "Masukan kata: mancing\n",
+            "Huruf-Huruf dalam kata: \n",
+            "- m\n",
+            "- a\n",
+            "- n\n",
+            "- c\n",
+            "- i\n",
+            "- n\n",
+            "- g\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### While Loop"
+      ],
+      "metadata": {
+        "id": "mgiAbsTifVCk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- While Loop mengulang kode sama kondisi tertentu masih Trus"
+      ],
+      "metadata": {
+        "id": "5lb1qhvTfbEe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mencetak angka 1 sampai 5\n",
+        "angka = 1\n",
+        "while angka <= 5:\n",
+        "  print(angka)\n",
+        "  angka += 1\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "# Input sampai benar\n",
+        "password = \"\"\n",
+        "while password != \"12345\":\n",
+        "    password = input(\"Masukan password: \")\n",
+        "    if password != \"12345\":\n",
+        "        print(\"password salah, coba lagi\")\n",
+        "    else:\n",
+        "        print(\"password berhasil\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FZzJjqcdfaHP",
+        "outputId": "c6770c75-c4f9-47aa-ae59-550bb4b4b7a0"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "\n",
+            "\n",
+            "Masukan password: 12345\n",
+            "password berhasil\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Break and Continue"
+      ],
+      "metadata": {
+        "id": "kyJObfBf4SqE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Break"
+      ],
+      "metadata": {
+        "id": "TfeK16yU6r_S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Game tebak angka dengan break\n",
+        "\n",
+        "angka_rahasia = 7\n",
+        "\n",
+        "while True:\n",
+        "    tebakan = int(input(\"Tebak angka (1-10: )\"))\n",
+        "\n",
+        "    if tebakan == 7:\n",
+        "        print(\"Tebakan anda benar!\")\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"Tebakan anda salah\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UVqfF6Tn4uIM",
+        "outputId": "93faf33a-825f-4c4e-c11a-d134ef35a058"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tebak angka (1-10: )3\n",
+            "Tebakan anda salah\n",
+            "Tebak angka (1-10: )1\n",
+            "Tebakan anda salah\n",
+            "Tebak angka (1-10: )2\n",
+            "Tebakan anda salah\n",
+            "Tebak angka (1-10: )5\n",
+            "Tebakan anda salah\n",
+            "Tebak angka (1-10: )6\n",
+            "Tebakan anda salah\n",
+            "Tebak angka (1-10: )7\n",
+            "Tebakan anda benar!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Continue"
+      ],
+      "metadata": {
+        "id": "apIXS9Nf6-Hx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mencetak angka Ganjil saja\n",
+        "for i in range(10):\n",
+        "  if i % 2 == 0: # jika genap\n",
+        "      continue   # Lewati, langjut ke anka berikutnya\n",
+        "  print(i)       # Hanya Mencetak angka ganjil"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U2qodYCa7Lgv",
+        "outputId": "191fdbeb-9fd1-440a-8efd-0587843810c8"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Loop dengan else"
+      ],
+      "metadata": {
+        "id": "LfoAhK4i8FmO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mencari hurup dalam kata\n",
+        "kata = input(\"Masukan kata: \")\n",
+        "huruf_dicari = input(\"Masukan huruf yang dicari: \")\n",
+        "\n",
+        "for huruf in kata:\n",
+        "    if huruf == huruf_dicari:\n",
+        "      print(\"huruf\", huruf_dicari, \"Ditemukan dalam kata\")\n",
+        "      break\n",
+        "else:\n",
+        "  print(\"Huruf\", huruf_dicari, \"tidak ditemukan\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bZrYNCOHOTJt",
+        "outputId": "90cc9859-f97f-4f62-f8c1-0cc41c28894d"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan kata: baca\n",
+            "Masukan huruf yang dicari: c\n",
+            "huruf c Ditemukan dalam kata\n"
+          ]
+        }
+      ]
     }
   ]
 }
