--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -4,7 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8k/Z03ETPiOyZ1buVUEfs",
+      "toc_visible": true,
+      "collapsed_sections": [
+        "mgiAbsTifVCk"
+      ],
+      "authorship_tag": "ABX9TyPbW0qFyKesbc1in9amj2LD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1644,6 +1648,264 @@
             "Masukan kata: baca\n",
             "Masukan huruf yang dicari: c\n",
             "huruf c Ditemukan dalam kata\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### While dengan else"
+      ],
+      "metadata": {
+        "id": "Kw6vifDEAVOY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "password_benar = \"python123\"\n",
+        "percobaan = 0\n",
+        "max_Percobaan = 3\n",
+        "\n",
+        "while percobaan < max_Percobaan:\n",
+        "  password = input(\"Masukan password: \")\n",
+        "  percobaan += 1\n",
+        "\n",
+        "  if password == password_benar:\n",
+        "      print(\"Login berhasil!\")\n",
+        "      break\n",
+        "  else:\n",
+        "      print(\"Password salah. Sisa percobaan:\", max_Percobaan - percobaan)\n",
+        "else:\n",
+        "  print(\"Terlalu banyak percobaan, akses di tolak\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xbWGdk4hASB1",
+        "outputId": "b904db17-a2ba-4839-80da-bcd5f7d78da9"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan password: 123\n",
+            "Password salah. Sisa percobaan: 2\n",
+            "Masukan password: 22\n",
+            "Password salah. Sisa percobaan: 1\n",
+            "Masukan password: 321\n",
+            "Password salah. Sisa percobaan: 0\n",
+            "Terlalu banyak percobaan, akses di tolak\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Perulangan Bersarang (Nested Loop)"
+      ],
+      "metadata": {
+        "id": "DAB31dKXLkS-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tabel perkalian lengkap\n",
+        "print(\"Tabel Perkalian 1-5: \")\n",
+        "for i in range(1,6):\n",
+        "    for j in range(1,6):\n",
+        "        hasil = i * j\n",
+        "        print(i, \"x\", j , \"=\", hasil)\n",
+        "    print(\"---------\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nr6pq6wYLp6M",
+        "outputId": "ac27510a-e03f-40da-cadb-8d54b636c1c1"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tabel Perkalian 1-5: \n",
+            "1 x 1 = 1\n",
+            "1 x 2 = 2\n",
+            "1 x 3 = 3\n",
+            "1 x 4 = 4\n",
+            "1 x 5 = 5\n",
+            "---------\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "---------\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "---------\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "---------\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "---------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Struktur Data"
+      ],
+      "metadata": {
+        "id": "9D0C9xtfNb2Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Struktur data adalah cara untuk menyimpan dan mengorganisir data dalam program\n",
+        "- Sejauh ini kita usdah belajar menyimpan satu nilai dalam satu variabel\n",
+        "- Sekarang kita akan belajar cara menyimpan banyak nilai sekaligus"
+      ],
+      "metadata": {
+        "id": "ZxrLcy2jNqmr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### List"
+      ],
+      "metadata": {
+        "id": "XfiKFNL3OCZq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- List adalah kumpuland ata yang bisa menyimpan banyak nilai dalam satu variabel lis di tulis dengan kurung siku []"
+      ],
+      "metadata": {
+        "id": "sOybB2bsOEcs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List kosong\n",
+        "daftar_kosong = []\n",
+        "\n",
+        "# List dengan angka\n",
+        "angka = [1, 2, 3, 4, 5]\n",
+        "print(angka)\n",
+        "\n",
+        "# List dengan string\n",
+        "nama = [\"hotman\", \" rukia\", \"carli\"]\n",
+        "print(nama)\n",
+        "\n",
+        "# List campuran\n",
+        "campuran = [\" hotmat\", 23, \"rukia\", 25]\n",
+        "print(campuran)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "# Memanggil list\n",
+        "buah = [\"mangga\", \"jeruk\", \"strawberry\"]\n",
+        "print(buah[2])\n",
+        "print(buah[0])\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "# Mengganti salah satu index\n",
+        "print(\"- Mengganti salah satu index-\")\n",
+        "print(\"before\")\n",
+        "sayuran = [\"kangkung\", \"terong\", \"wortol\", \"bayam\"]\n",
+        "print(sayuran)\n",
+        "print(\"after\")\n",
+        "sayuran[3] = \"jagung\" #mengganti bayam\n",
+        "print(sayuran)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#Menambah index diakhir\n",
+        "print(\"-Menambah index/list diakhir-\")\n",
+        "\n",
+        "print(\"Before\")\n",
+        "buah = [\"apel\", \"tomat\"]\n",
+        "print(buah)\n",
+        "\n",
+        "print(\"after\")\n",
+        "buah.append(\"semangka\")\n",
+        "print(buah)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#Menambah index dimanapun\n",
+        "print(\"-Menambah index dimanapun-\")\n",
+        "\n",
+        "buah.insert(1, \"buah naga\") #menambah ke index 1\n",
+        "print(buah)\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h_kwignVOASP",
+        "outputId": "d73c5e66-ace4-4134-a315-c4c9db8749d3"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n",
+            "['hotman', ' rukia', 'carli']\n",
+            "[' hotmat', 23, 'rukia', 25]\n",
+            "\n",
+            "\n",
+            "strawberry\n",
+            "mangga\n",
+            "\n",
+            "\n",
+            "- Mengganti salah satu index-\n",
+            "before\n",
+            "['kangkung', 'terong', 'wortol', 'bayam']\n",
+            "after\n",
+            "['kangkung', 'terong', 'wortol', 'jagung']\n",
+            "\n",
+            "\n",
+            "-Menambah index/list diakhir-\n",
+            "Before\n",
+            "['apel', 'tomat']\n",
+            "after\n",
+            "['apel', 'tomat', 'semangka']\n",
+            "\n",
+            "\n",
+            "-Menambah index dimanapun-\n",
+            "['apel', 'buah naga', 'tomat', 'semangka']\n"
           ]
         }
       ]
