--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -4,11 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "collapsed_sections": [
         "mgiAbsTifVCk"
       ],
-      "authorship_tag": "ABX9TyPbW0qFyKesbc1in9amj2LD",
+      "authorship_tag": "ABX9TyPKQ+1yMbwDkeHLZgfkwyfy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1140,7 +1139,7 @@
         },
         "outputId": "19c3cbca-1d16-4498-ff78-9b9e8e870086"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,7 +1183,7 @@
         "id": "E3IRGY2FKcKd",
         "outputId": "729cc843-c937-40c9-8dde-b3ddbfe3252b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1237,7 +1236,7 @@
         "id": "LIRFh_iAMdR-",
         "outputId": "9f1e549d-6e2a-4875-ac01-64dbc1eea6e8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1289,7 +1288,7 @@
         "id": "n0c8tGepOreW",
         "outputId": "1b5e3e9a-be77-43d1-bac6-04cbdc3bb279"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1361,7 +1360,7 @@
         "id": "-Ufbd6gIHUbk",
         "outputId": "ddbc6312-de50-4169-9c6d-31c9a8982f49"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1415,7 +1414,7 @@
         "id": "QlBZKagXeM_Q",
         "outputId": "6caf8b89-d9a9-4f5f-c273-e3134d5780d3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1487,7 +1486,7 @@
         "id": "FZzJjqcdfaHP",
         "outputId": "c6770c75-c4f9-47aa-ae59-550bb4b4b7a0"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1547,7 +1546,7 @@
         "id": "UVqfF6Tn4uIM",
         "outputId": "93faf33a-825f-4c4e-c11a-d134ef35a058"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1594,7 +1593,7 @@
         "id": "U2qodYCa7Lgv",
         "outputId": "191fdbeb-9fd1-440a-8efd-0587843810c8"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1639,7 +1638,7 @@
         "id": "bZrYNCOHOTJt",
         "outputId": "90cc9859-f97f-4f62-f8c1-0cc41c28894d"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1687,7 +1686,7 @@
         "id": "xbWGdk4hASB1",
         "outputId": "b904db17-a2ba-4839-80da-bcd5f7d78da9"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1731,7 +1730,7 @@
         "id": "nr6pq6wYLp6M",
         "outputId": "ac27510a-e03f-40da-cadb-8d54b636c1c1"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,16 +1865,49 @@
         "\n",
         "buah.insert(1, \"buah naga\") #menambah ke index 1\n",
         "print(buah)\n",
-        ""
+        "\n",
+        "[print(\"\\n\")]\n",
+        "\n",
+        "# Menghapus datanya\n",
+        "print(\"-Menghapus data-\")\n",
+        "buah.remove(\"tomat\")\n",
+        "print(buah)\n",
+        "\n",
+        "# Menghapus berdasarkan index\n",
+        "print(\"Menghapus berdasarkan index\")\n",
+        "del buah[0]\n",
+        "print(buah)\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "# Menggabungkan 2 list\n",
+        "print(\"Menggabungkan dua list\")\n",
+        "\n",
+        "satu = [1,2,3,4,5]\n",
+        "print(satu)\n",
+        "dua = [6,7,8,9,10]\n",
+        "print(dua)\n",
+        "\n",
+        "gabungan = satu + dua\n",
+        "print(gabungan)\n",
+        "\n",
+        "# Perulangan list\n",
+        "#contoh satu\n",
+        "print(\"perulangan list\")\n",
+        "banyak_buah = [\"apel\", \"jeruk\", \"mangga\", \"durian\"]\n",
+        "for buah in banyak_buah:\n",
+        "  print(buah)\n",
+        "# Contoh dua\n",
+        "for i in range(len(banyak_buah)):\n",
+        "    print(banyak_buah[i])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h_kwignVOASP",
-        "outputId": "d73c5e66-ace4-4134-a315-c4c9db8749d3"
+        "outputId": "aab9d525-8c57-4984-85e8-1f59232b44ed"
       },
-      "execution_count": 90,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,10 +1937,361 @@
             "\n",
             "\n",
             "-Menambah index dimanapun-\n",
-            "['apel', 'buah naga', 'tomat', 'semangka']\n"
+            "['apel', 'buah naga', 'tomat', 'semangka']\n",
+            "\n",
+            "\n",
+            "-Menghapus data-\n",
+            "['apel', 'buah naga', 'semangka']\n",
+            "Menghapus berdasarkan index\n",
+            "['buah naga', 'semangka']\n",
+            "\n",
+            "\n",
+            "Menggabungkan dua list\n",
+            "[1, 2, 3, 4, 5]\n",
+            "[6, 7, 8, 9, 10]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+            "perulangan list\n",
+            "apel\n",
+            "jeruk\n",
+            "mangga\n",
+            "durian\n",
+            "apel\n",
+            "jeruk\n",
+            "mangga\n",
+            "durian\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Tuple"
+      ],
+      "metadata": {
+        "id": "QQcpr99nAPAd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-1NRJThFA-Xq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- tuple saya sama dengan list tetapi ***tidak bisa di ubah data datanya***"
+      ],
+      "metadata": {
+        "id": "lDv4PXqNAS8w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "point = (5,10)\n",
+        "print(point)\n",
+        "print(point[1])\n",
+        "\n",
+        "tanggal_lahir = (10, 8, 2002)\n",
+        "print(tanggal_lahir)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CFlH-rc0Acsm",
+        "outputId": "43abe285-12f6-4bcd-e243-b14191b82afe"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5, 10)\n",
+            "10\n",
+            "(10, 8, 2002)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Dictionary (kamus)"
+      ],
+      "metadata": {
+        "id": "A9e3kbu1BGrE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "- Dictionary menyimpan data dalam pasangan key-value(kunci-nilai). Dictionary ditulis dengan kurung kurawa [].\n",
+        "- Untuk membuat data dictionary, kita perlu menentukan key dan juga valuenya\n"
+      ],
+      "metadata": {
+        "id": "fEEPBBQUBLrG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dictionari dengan data\n",
+        "siswa = {\n",
+        "    \"nama\" : \"Hamka\",\n",
+        "    \"umur\" : \"21\",\n",
+        "    \"kelas\" : \"3C\"\n",
+        "}\n",
+        "\n",
+        "print(siswa)\n",
+        "\n",
+        "print(siswa[\"nama\"]) # Hamka\n",
+        "print(siswa[\"umur\"]) # 20\n",
+        "print(siswa[\"kelas\"]) # 2c\n",
+        "\n",
+        "# Merubah data\n",
+        "siswa[\"Kelas\"] = \"12B\"\n",
+        "\n",
+        "#Menghapus\n",
+        "del siswa[\"umur\"]\n",
+        "print(siswa)\n",
+        "\n",
+        "#iterasi\n",
+        "for key in siswa:\n",
+        "  print(key, siswa[key])\n",
+        "\n",
+        "for key, value in siswa.items():\n",
+        "    print(key, value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "azFHb0B4B8Yl",
+        "outputId": "f9bdf7b0-76f7-4ea4-bc49-d8334cab1499"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'nama': 'Hamka', 'umur': '21', 'kelas': '3C'}\n",
+            "Hamka\n",
+            "21\n",
+            "3C\n",
+            "{'nama': 'Hamka', 'kelas': '3C', 'Kelas': '12B'}\n",
+            "nama Hamka\n",
+            "kelas 3C\n",
+            "Kelas 12B\n",
+            "nama Hamka\n",
+            "kelas 3C\n",
+            "Kelas 12B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Set (Himpunan)"
+      ],
+      "metadata": {
+        "id": "D4PM_GePDfcD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- set kumpulan data yang tidak berurutan dan tidak memiliki elemen duplikat\n",
+        "- Set ditulis dengan kurung kurawal {}atau fungsi set()\n",
+        "- Untuk menambah data ke set, kita bisagunakan methid add(value)\n"
+      ],
+      "metadata": {
+        "id": "SKfgjL01DjFf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tidak berurutan di outputnya\n",
+        "buah = {\"anggur\", \"Semangka\", \"pisang\"}\n",
+        "print(buah)\n",
+        "\n",
+        "#Menambah\n",
+        "buah.add(\"mangga\")\n",
+        "print(buah)\n",
+        "\n",
+        "for x in buah:\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NC288f6TaPyF",
+        "outputId": "567aa249-6f93-44e2-ff3d-c4cf5203b8fa"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Semangka', 'anggur', 'pisang'}\n",
+            "{'Semangka', 'mangga', 'anggur', 'pisang'}\n",
+            "Semangka\n",
+            "mangga\n",
+            "anggur\n",
+            "pisang\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Function"
+      ],
+      "metadata": {
+        "id": "_2WI_f23axJd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Function dibuah menggunakan kata kuci ***def***\n",
+        "- tambahkan : (titik dua) setelah ()"
+      ],
+      "metadata": {
+        "id": "lUBiuzBubJLZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####function"
+      ],
+      "metadata": {
+        "id": "32Pw1eP9beCd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Membuat fungsi\n",
+        "def nama_function():\n",
+        "      print(\"hallo saya function\")\n",
+        "\n",
+        "nama_function()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "93HcKG4ca2aU",
+        "outputId": "c6c49d51-8aa4-4ec1-d86d-bfef7eb2c497"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hallo saya function\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####function dengan parameter"
+      ],
+      "metadata": {
+        "id": "xvtHeATybg_x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "- Parameter memungkikan kita mengirim data ke function\n",
+        "- Caranya kita bisa tambahkan nama parameter diantara kurung buka dan kurung tutup di function\n",
+        "- jika kita ingin menambahkan lebih dari satu parameter, kita bisa gunakan karakter koma sebagai pemisah parameter tersebut\n",
+        "- Saat memanggil functionnya, maka kita wajib mengisi data pada parameter functionnya"
+      ],
+      "metadata": {
+        "id": "HjsaHf10bkNL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#parameter = nama\n",
+        "#seperti variabel\n",
+        "\n",
+        "def sapa_nama(nama):\n",
+        "  print(\"Hello\", nama)\n",
+        "  print(\"Senang bertemu dengan anda\")\n",
+        "\n",
+        "sapa_nama(\"Hamka\")\n",
+        "sapa_nama(\"jons\")\n",
+        "\n",
+        "def hitung_luas_persegi_panjang(panjang, lebar):\n",
+        "  luas = panjang * lebar\n",
+        "  print(\"Luas persegi panjang\", luas)\n",
+        "\n",
+        "hitung_luas_persegi_panjang(10,5)\n",
+        "hitung_luas_persegi_panjang(4,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kmm4ZXmLcPXd",
+        "outputId": "6c722dc1-0377-498d-f62c-8dc5352abf18"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Hamka\n",
+            "Senang bertemu dengan anda\n",
+            "Hello jons\n",
+            "Senang bertemu dengan anda\n",
+            "Luas persegi panjang 50\n",
+            "Luas persegi panjang 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Function dengan Return Value"
+      ],
+      "metadata": {
+        "id": "hHl-hVi7eg9k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "FbW-p9NueklH"
+      }
     }
   ]
 }
